# ARC-Protocol

./: .env.example  .gitignore  CONTRIBUTING-DISTRO.md  LICENSE  README.md  SECURITY.md  VIRALITY.md  docker-compose.yml  railway.json  seed-genesis.sh  seed-remote.sh
.claude/: launch.json
.github/workflows/: deploy-backend.yml
backend/: .dockerignore  Dockerfile  api.py  arc.py  codegen_agent.py  compliance_agent.py  content_agent.py  data_agent.py  design_agent.py  entrypoint.sh  example_agent.py  legal_agent.py  main.py  marketplace.py  memory.py  multi_agent_dag.py  orchestrator_agent.py  requirements.txt  research_agent.py  seed.db  support_agent.py  trader_agent.py
backend/tests/: test_arc.py  test_memory.py
distro/arc-goose/: config.yaml  docker-compose.yml  install.sh
distro/arc-goose/branding/: banner.txt  colors.json  logo.svg.md
frontend/: middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: arc-certified.js  site.webmanifest
frontend/src/app/: globals.css  (+3 more)
mcp-server/: Dockerfile  README.md  pyproject.toml
mcp-server/goose-memory-skill/: SKILL.md
mcp-server/src/arc_mcp/: __init__.py  client.py  config.py  server.py
mcp-server/tests/: test_tools.py
orchestrator/: Dockerfile  README.md  api.py  goose_bridge.py  provenance_report.py  pyproject.toml  recipe_middleware.py  runtime.py
orchestrator/agents/: code-generator.yaml  compliance-audit.yaml  content-creator.yaml  customer-support.yaml  data-analysis.yaml  deep-research.yaml  defi-trader.yaml  design-images.yaml  legal-contracts.yaml  orchestrator.yaml
orchestrator/legacy/: README.md
orchestrator/recipe-schema/: arc-recipe.schema.yaml
orchestrator/recipes/: arc-code-review.yaml  arc-content-pipeline.yaml  arc-data-analysis.yaml  arc-deep-research.yaml  arc-legal-draft.yaml
orchestrator/src/arc_orchestrator/: __init__.py  api.py  goose_bridge.py  provenance_report.py  recipe_middleware.py  registry.py  runtime.py  state.py
orchestrator/tests/: test_recipe_middleware.py  test_registry.py  test_runtime.py
(+51 files in other folders)
