[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc-mcp"
version = "0.1.0"
description = "Model Context Protocol server that exposes ARC Protocol (Bitcoin-native agent identity, provenance, and Lightning settlement) as MCP tools for Goose and other MCP-compatible AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ARC Protocol Contributors" }]
keywords = ["mcp", "arc", "bitcoin", "schnorr", "agent", "provenance", "lightning", "goose"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
arc-mcp = "arc_mcp.server:run_stdio"
arc-mcp-sse = "arc_mcp.server:run_sse"

[tool.hatch.build.targets.wheel]
packages = ["src/arc_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
